Train raytraces generated sources and kappamaps

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -594,6 +594,292 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]\n",
+      "   [ 4]]\n",
+      "\n",
+      "  [[ 5]\n",
+      "   [ 6]\n",
+      "   [ 7]\n",
+      "   [ 8]]\n",
+      "\n",
+      "  [[ 9]\n",
+      "   [10]\n",
+      "   [11]\n",
+      "   [12]]\n",
+      "\n",
+      "  [[13]\n",
+      "   [14]\n",
+      "   [15]\n",
+      "   [16]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "IM = tf.constant([1, 2, 3, 4, 5, 6, 7,8,9,10,11,12,13,14,15,16], shape = [1, 4, 4,1] )\n",
+    "mult = tf.constant([5,1,1,1] )\n",
+    "x = tf.placeholder(tf.float32, shape=[None, 4,4,1])\n",
+    "\n",
+    "\n",
+    "b1 = tf.shape(x)[0:1]\n",
+    "b2 = (x.shape.as_list())[1]\n",
+    "\n",
+    "a = tf.constant([(x.shape.as_list())[1], 1, 1, 1])\n",
+    "\n",
+    "tiled = tf.manip.tile(IM, a)\n",
+    "\n",
+    "A = tf.constant(1)\n",
+    "Amult = tf.stack([tf.shape(x)[0], A,A,A])\n",
+    "y = tf.tile(IM, Amult)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "y = sess.run(y, feed_dict={x: np.zeros([11, 4,4,1])})\n",
+    "print y\n",
+    "#til =  sess.run(tiled)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print y[1,:,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
