evaluate the likelihood

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -83,9 +83,16 @@
     "Kappatest = tf.placeholder( tf.float32, [None, Datagen.numkappa_side, Datagen.numkappa_side,1] )\n",
     "Srctest = tf.placeholder( tf.float32, [None, Raytracer.numpix_side, Raytracer.numpix_side,1] )\n",
     "\n",
+    "y_ = tf.placeholder(dtype=tf.float32,shape=[None,Datagen.numkappa_side**2])\n",
+    "y_image = Kappatest\n",
+    "x_init = tf.zeros_like(y_image)\n",
     "\n",
-    "IM = Raytracer.get_lensed_image(Kappatest,[0.,0.], 7.68, Srctest)\n",
     "\n",
+    "\n",
+    "Raytracer.trueimage = Raytracer.get_lensed_image(Kappatest,[0.,0.], 7.68, Srctest)\n",
+    "\n",
+    "\n",
+    "x_image = Raytracer.trueimage\n",
     "\n",
     "imout= sess.run(IM, feed_dict={Srctest: Datagen.source, Kappatest: Datagen.kappa})"
    ]
