training with batch 1

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -25,18 +25,73 @@
      "output_type": "stream",
      "text": [
       "Using RNN\n",
-      "Tensor(\"Maximum:0\", shape=(?, 192, 192, 1), dtype=float32) <iterative_inference_learning.layers.rnn_cell.MultiRNNCellFlex object at 0x1a1ee87210> <iterative_inference_learning.layers.loopfun.InputFunction object at 0x1a1eeac2d0> <iterative_inference_learning.layers.loopfun.OutputFunction object at 0x1a1eeac490> <function init_func at 0x1a1eea5f50> Tensor(\"T:0\", shape=(), dtype=int32)\n",
-      "3 1 Tensor(\"RNN/stack_2:0\", shape=(?, 192, 192, 1), dtype=float32)\n",
-      "3 1 Tensor(\"RNN/while/stack_2:0\", shape=(?, 192, 192, 1), dtype=float32)\n",
-      "xold is  Tensor(\"RNN/while/Identity_3:0\", shape=(?, 192, 192, 2), dtype=float32)\n",
-      "xout is  Tensor(\"RNN/while/Conv/Conv2D:0\", shape=(?, 192, 192, 2), dtype=float32)\n",
+      "Tensor(\"Maximum:0\", shape=(?, 24, 24, 1), dtype=float32) <iterative_inference_learning.layers.rnn_cell.MultiRNNCellFlex object at 0x1a1a8f3850> <iterative_inference_learning.layers.loopfun.InputFunction object at 0x1a1a91e910> <iterative_inference_learning.layers.loopfun.OutputFunction object at 0x1a1a91ead0> <function init_func at 0x1a1a918d70> Tensor(\"T:0\", shape=(), dtype=int32)\n",
+      "3 1 Tensor(\"RNN/stack_2:0\", shape=(?, 24, 24, 1), dtype=float32)\n",
+      "3 1 Tensor(\"RNN/while/stack_2:0\", shape=(?, 24, 24, 1), dtype=float32)\n",
+      "xold is  Tensor(\"RNN/while/Identity_3:0\", shape=(?, 24, 24, 2), dtype=float32)\n",
+      "xout is  Tensor(\"RNN/while/Conv/Conv2D:0\", shape=(?, 24, 24, 2), dtype=float32)\n",
       "Sampling data\n",
-      "Iterating...\n"
+      "Iterating...\n",
+      "0\n",
+      "generated data batch 0\n",
+      "(1, 24, 24, 1)\n",
+      "(1, 24, 24, 1)\n",
+      "DONE\n",
+      "Optimization Finished!\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/llevasseur/miniconda2/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2886: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
     "execfile('lensmodel_hires.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSystemExit\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5154b8da2b47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexecfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'lensmodel_hires.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/llevasseur/Documents/travail/Censai/lensmodel_hires.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 333\u001b[0;31m     \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/llevasseur/miniconda2/lib/python2.7/site-packages/tensorflow/python/platform/app.pyc\u001b[0m in \u001b[0;36mrun\u001b[0;34m(main, argv)\u001b[0m\n\u001b[1;32m    123\u001b[0m   \u001b[0;31m# Call the main function, passing through any arguments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m   \u001b[0;31m# to the final program.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m   \u001b[0m_sys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSystemExit\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "%tb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saver.save(sess,model_name)"
    ]
   },
   {
@@ -114,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,20 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "193"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Datagen.numkappa_side"
    ]
