writing a different  minimizers for each RIM

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -449,9 +449,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 2 (nix/python-2.7.15-env)",
    "language": "python",
-   "name": "python2"
+   "name": "python-2.7.15-env-python2"
   },
   "language_info": {
    "codemirror_mode": {
