committing old changes after a long time

--- a/notebooks/auto_encoding_rim/VAE_source.ipynb
+++ b/notebooks/auto_encoding_rim/VAE_source.ipynb
@@ -118,14 +118,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -157,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "load_checkpoint_path = \"checkpoints/model_VAE_512\"\n",
+    "load_checkpoint_path = \"checkpoints/model_VAE_512_SRC\"\n",
     "save_checkpoint_path = \"checkpoints/model_VAE_512_SRC\"\n",
     "RESTORE = True\n",
     "if (RESTORE==True):\n",
@@ -239,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -19361,7 +19367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.reduce_max(batch_kappa[0])"
