updated notebooks and tensorboard shell

--- a/notebooks/train_autoencoder.ipynb
+++ b/notebooks/train_autoencoder.ipynb
@@ -411,7 +411,8 @@
     "#         chi_squared = 0.5 * tf.reduce_mean(tf.abs((x_true - x_pred))**2 / tf.exp(ps)[..., 0] / (2 * pi) ** 2, axis=(1, 2))\n",
     "#         chi_squared = 0.5 * tf.reduce_mean(tf.square(image - x_pred) / tf.exp(ps)[..., 0, 0][..., tf.newaxis, tf.newaxis], axis=(1, 2))\n",
     "        chi_squared = 0.5 * tf.reduce_mean(tf.square(image - x_pred), axis=(1, 2))\n",
-    "        return chi_squared + bottleneck_l2_cost + apo_loss + tv_loss\n"
+    "        return chi_squared + bottleneck_l2_cost + apo_loss + tv_loss\n",
+    "cov"
    ]
   },
   {
