--- a/notebooks/rim_results.ipynb
+++ b/notebooks/rim_results.ipynb
@@ -5899,9 +5899,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5bb7e525-8a91-4695-83cc-5abbddf16654",
+   "metadata": {},
+   "source": [
+    "# RIMSU wVAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "29a861c3-96f9-42e9-b180-9bea85542722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kappa_first_stage_vae=os.path.join(os.getenv(\"CENSAI_PATH\"), \"/models/VAE1_kappa_HPARAMS2_010_CL2_F64_NLbipolar_relu_LS32_210812184741\")\n",
+    "kappa_second_stage_vae=os.path.join(os.getenv(\"CENSAI_PATH\"), \"/models/VAE1_kappa_HPARAMS2_010_CL2_F64_NLbipolar_relu_LS32_210812184741_second_stage_210813104442\")\n",
+    "source_first_stage_vae=os.path.join(os.getenv(\"CENSAI_PATH\"), \"/models/VAE1_cosmos_HPARAMS_029_L3_CL4_F16_NLleaky_relu_LS128_ssi0.001_210810161842\")\n",
+    "source_second_stage_vae=os.path.join(os.getenv(\"CENSAI_PATH\"), \"/models/VAE1_cosmos_HPARAMS_029_L3_CL4_F16_NLleaky_relu_LS128_ssi0.001_210810161842_second_stage_210812235647\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hourly-milwaukee",
+   "id": "6477ee35-945c-4279-ba7e-2ca08ebabc15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5909,9 +5930,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "censai",
    "language": "python",
-   "name": "python3"
+   "name": "censai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5923,7 +5944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
