Changed list to TensorArray in physical model fft forward method. The for loop is still a problem for larger batch and will require the RayTracer

--- a/notebooks/rim_results.ipynb
+++ b/notebooks/rim_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "patent-handling",
+   "id": "south-consumer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-copying",
+   "id": "dominant-muscle",
    "metadata": {},
    "source": [
     "# Scale Dataset 512 k128"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "awful-radiation",
+   "id": "mexican-european",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dimensional-routine",
+   "id": "gentle-asset",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-arbor",
+   "id": "collect-surname",
    "metadata": {},
    "source": [
     "# Scale Filters 512 k128"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "invalid-monday",
+   "id": "controlled-athletics",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "absent-growing",
+   "id": "suspended-elevation",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-absolute",
+   "id": "three-times",
    "metadata": {},
    "source": [
     "# Scale Filters Doube Unet 512 k128"
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "failing-steam",
+   "id": "invisible-disaster",
    "metadata": {},
    "outputs": [
     {
@@ -5841,7 +5841,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "green-september",
+   "id": "modern-vault",
    "metadata": {},
    "outputs": [
     {
@@ -5902,7 +5902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb7e525-8a91-4695-83cc-5abbddf16654",
+   "id": "passive-postcard",
    "metadata": {},
    "source": [
     "# RIMSU wVAE"
@@ -5911,7 +5911,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "1d2c74c1-9f2d-4e0a-a1fd-d0156bb399de",
+   "id": "outside-distributor",
    "metadata": {},
    "outputs": [
     {
@@ -8258,7 +8258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6477ee35-945c-4279-ba7e-2ca08ebabc15",
+   "id": "prostate-elephant",
    "metadata": {},
    "outputs": [
     {
@@ -8316,7 +8316,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "45e48f37-64cd-42bc-b0ce-163db167f347",
+   "id": "short-europe",
    "metadata": {},
    "outputs": [
     {
@@ -8392,7 +8392,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "06f8f12a-4390-4aad-a6d9-b0204486ba63",
+   "id": "subjective-conflict",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8408,7 +8408,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "7bb8ff3d-f7c5-4212-8298-4c859eadd215",
+   "id": "modified-correction",
    "metadata": {},
    "outputs": [
     {
@@ -8453,7 +8453,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "20eed079-096b-4988-8ad9-3df54ef83c89",
+   "id": "minus-alias",
    "metadata": {},
    "outputs": [
     {
@@ -8497,7 +8497,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "ec24598d-d521-4f64-8b83-481132dc2af3",
+   "id": "intellectual-dodge",
    "metadata": {},
    "outputs": [
     {
@@ -8540,7 +8540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb68fbf-937b-4172-b862-51902ee6e271",
+   "id": "ignored-earth",
    "metadata": {},
    "source": [
     "# Double Unet"
@@ -8549,7 +8549,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4723cceb-0dc9-48ec-8b18-310511ba97ad",
+   "id": "planned-backing",
    "metadata": {},
    "outputs": [
     {
@@ -8695,7 +8695,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c1b0397-7a93-42b4-b19b-b5621ad526a4",
+   "id": "authorized-physics",
    "metadata": {},
    "outputs": [
     {
@@ -8792,7 +8792,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "689b31b7-1022-4afc-997e-20d67f7e1169",
+   "id": "limited-affiliate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8808,7 +8808,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0249e886-45ad-4c26-822c-8c4822c9556e",
+   "id": "separated-amazon",
    "metadata": {},
    "outputs": [
     {
@@ -8853,7 +8853,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3098599e-b2ae-49e9-b600-bc528e991f31",
+   "id": "competitive-stuff",
    "metadata": {},
    "outputs": [
     {
@@ -8897,7 +8897,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9b0a43d5-7af2-4e9a-bdfe-9a98d4b70076",
+   "id": "boolean-wireless",
    "metadata": {},
    "outputs": [
     {
@@ -8941,7 +8941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834524ef-2748-4f48-b3a1-49d3ad517cab",
+   "id": "convenient-wilson",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8949,9 +8949,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8963,7 +8963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
