Fixed ratracer train script

--- a/notebooks/create_rim_dataset.ipynb
+++ b/notebooks/create_rim_dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ba19255-b8bf-472a-b06f-b6e6c3fa8adb",
+   "id": "centered-taxation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f417f3e1-4046-4edc-9513-a266ee4a348b",
+   "execution_count": 2,
+   "id": "ranging-function",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,10 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "7dafdcbc-7e8b-4edd-9406-0940aed4f480",
+   "execution_count": 3,
+   "id": "suburban-store",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-32c7dbab3982>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mmin_theta_e\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.05\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mimage_fov\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mmin_theta_e\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmin_theta_e\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mmax_theta_e\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.35\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mimage_fov\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mmax_theta_e\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmax_theta_e\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m kappa_gen = AugmentedTNGKappaGenerator(\n\u001b[0m\u001b[1;32m     34\u001b[0m     \u001b[0mkappa_fits_files\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkappa_files\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0mz_lens\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mz_lens\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-afa45cc92f6c>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, kappa_fits_files, z_lens, z_source, crop, max_shift, rotate_by, min_theta_e, max_theta_e, rescaling_size, rescaling_theta_bins)\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mrescaling_theta_bins\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     ):\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkappa_fits_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PRIMARY\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkappa_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkappa_fits_files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mz_lens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mz_lens\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mz_lens\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ZLENS\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "kappa_dir = os.getenv(\"CENSAI_PATH\") + \"/data/hkappa158_TNG100_512\"\n",
     "image_fov = 20\n",
@@ -318,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "afb2a294-b072-43cb-9b02-2e1af7c3027d",
+   "id": "legendary-conjunction",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9e51ec42-2e64-4d5c-988c-588fb66115a9",
+   "id": "satisfied-sharing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad573ad-9e80-40b8-9e9a-a97c0b716832",
+   "id": "rocky-prize",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -401,9 +414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -415,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
