Some figure printed and split cosmos

--- a/notebooks/rim_results.ipynb
+++ b/notebooks/rim_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-handling",
+   "id": "driven-march",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-copying",
+   "id": "ruled-bicycle",
    "metadata": {},
    "source": [
     "# Scale Dataset 512 k128"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "awful-radiation",
+   "id": "statistical-aaron",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dimensional-routine",
+   "id": "proprietary-academy",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-arbor",
+   "id": "piano-tourism",
    "metadata": {},
    "source": [
     "# Scale Filters 512 k128"
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "invalid-monday",
+   "id": "rotary-apache",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "absent-growing",
+   "id": "saved-reason",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-absolute",
+   "id": "continent-recognition",
    "metadata": {},
    "source": [
     "# Scale Filters Doube Unet 512 k128"
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "failing-steam",
+   "id": "military-circuit",
    "metadata": {},
    "outputs": [
     {
@@ -5841,7 +5841,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "green-september",
+   "id": "unnecessary-kernel",
    "metadata": {},
    "outputs": [
     {
@@ -5902,7 +5902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb7e525-8a91-4695-83cc-5abbddf16654",
+   "id": "closed-sleeping",
    "metadata": {},
    "source": [
     "# RIMSU wVAE"
@@ -5911,7 +5911,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "1d2c74c1-9f2d-4e0a-a1fd-d0156bb399de",
+   "id": "recreational-royal",
    "metadata": {},
    "outputs": [
     {
@@ -8258,7 +8258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6477ee35-945c-4279-ba7e-2ca08ebabc15",
+   "id": "pleasant-grass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8305,7 +8305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45e48f37-64cd-42bc-b0ce-163db167f347",
+   "id": "detailed-round",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8370,7 +8370,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "06f8f12a-4390-4aad-a6d9-b0204486ba63",
+   "id": "hazardous-drinking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8386,7 +8386,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "7bb8ff3d-f7c5-4212-8298-4c859eadd215",
+   "id": "ethical-resident",
    "metadata": {},
    "outputs": [
     {
@@ -8431,7 +8431,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "20eed079-096b-4988-8ad9-3df54ef83c89",
+   "id": "executed-deficit",
    "metadata": {},
    "outputs": [
     {
@@ -8475,7 +8475,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "ec24598d-d521-4f64-8b83-481132dc2af3",
+   "id": "perceived-difficulty",
    "metadata": {},
    "outputs": [
     {
@@ -8518,7 +8518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb68fbf-937b-4172-b862-51902ee6e271",
+   "id": "uniform-injury",
    "metadata": {},
    "source": [
     "# Double Unet"
@@ -8527,7 +8527,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4723cceb-0dc9-48ec-8b18-310511ba97ad",
+   "id": "educational-prisoner",
    "metadata": {},
    "outputs": [
     {
@@ -8673,7 +8673,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c1b0397-7a93-42b4-b19b-b5621ad526a4",
+   "id": "spare-princess",
    "metadata": {},
    "outputs": [
     {
@@ -8770,7 +8770,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "689b31b7-1022-4afc-997e-20d67f7e1169",
+   "id": "cooked-spanish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8786,7 +8786,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0249e886-45ad-4c26-822c-8c4822c9556e",
+   "id": "cultural-architecture",
    "metadata": {},
    "outputs": [
     {
@@ -8831,7 +8831,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3098599e-b2ae-49e9-b600-bc528e991f31",
+   "id": "electric-batch",
    "metadata": {},
    "outputs": [
     {
@@ -8875,7 +8875,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9b0a43d5-7af2-4e9a-bdfe-9a98d4b70076",
+   "id": "trying-struggle",
    "metadata": {},
    "outputs": [
     {
@@ -8919,7 +8919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834524ef-2748-4f48-b3a1-49d3ad517cab",
+   "id": "neither-deployment",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8927,9 +8927,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8941,7 +8941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
