--- a/notebooks/scale_complexity_experiment.ipynb
+++ b/notebooks/scale_complexity_experiment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22e3d45a-9431-4592-8737-988b935b56b3",
+   "id": "funky-villa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea247a09-6e48-4445-93a6-06faa353a6a8",
+   "id": "representative-glenn",
    "metadata": {},
    "source": [
     "# NIE no shift"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5963862e-9d48-48ed-b45a-6224b1dab501",
+   "id": "temporal-console",
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6321cea5-172f-4d2a-bf52-6c0dff6da88a",
+   "id": "hawaiian-roller",
    "metadata": {},
    "source": [
     "# NIE noshift vd"
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0ba67275-fdbc-4ae7-b485-1610828f144d",
+   "id": "agricultural-digit",
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "70d67b7c-c9b6-41bf-96bb-6de489ebf722",
+   "id": "immediate-broadcasting",
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebd1afd-7fa8-4d79-bb9a-e42328798033",
+   "id": "cardiac-indicator",
    "metadata": {},
    "source": [
     "# Source FOV = 10"
@@ -1992,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de8e4aa8-0a33-45b7-bc1f-4ec4033efd6b",
+   "id": "dirty-alignment",
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2443,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a676e981-37dd-4ccf-a2c1-75dab190a150",
+   "id": "joint-regulation",
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1b0daa8b-c140-42a0-aa6f-bd34bcdae332",
+   "id": "played-gazette",
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a42dd98e-eaea-4199-b701-9611fe06cdd0",
+   "id": "automotive-outside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2ae23fdf-68ff-496c-a9a3-301c1b5fc471",
+   "id": "signal-eligibility",
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "db6ec1ef-a855-4b9d-9408-602557552e73",
+   "id": "restricted-corner",
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b9f3b3-eed7-4e38-a80b-eb4002d6fc35",
+   "id": "correct-liabilities",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2805,9 +2805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2819,7 +2819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
