--- a/notebooks/test_initial_gradient.ipynb
+++ b/notebooks/test_initial_gradient.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aware-estimate",
+   "id": "polar-listening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ultimate-chinese",
+   "id": "spatial-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "electrical-gauge",
+   "id": "satisfactory-operator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "pharmaceutical-train",
+   "id": "lasting-grenada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "restricted-savannah",
+   "id": "classical-malpractice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "solar-glenn",
+   "id": "chicken-jerusalem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interpreted-placement",
+   "id": "invisible-engineering",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "functional-progress",
+   "id": "concerned-liberal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "agricultural-papua",
+   "id": "subsequent-spending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "qualified-female",
+   "id": "worldwide-substitute",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "pointed-pledge",
+   "id": "explicit-fetish",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bizarre-titanium",
+   "id": "falling-proxy",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "physical-pharmaceutical",
+   "id": "hired-destruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ahead-powder",
+   "id": "alike-syndication",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 377,
-   "id": "sustained-exhibit",
+   "id": "eligible-creativity",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "sufficient-gateway",
+   "id": "social-sensitivity",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "id": "weighted-deficit",
+   "id": "minute-quilt",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 469,
-   "id": "naval-austin",
+   "id": "unauthorized-repair",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "precious-custom",
+   "id": "uniform-adelaide",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convertible-accounting",
+   "id": "subjective-handling",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1000,9 +1000,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1014,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
