notebooks and params beluga

--- a/notebooks/scale_complexity_experiment.ipynb
+++ b/notebooks/scale_complexity_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "22e3d45a-9431-4592-8737-988b935b56b3",
    "metadata": {},
    "outputs": [],
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "de8e4aa8-0a33-45b7-bc1f-4ec4033efd6b",
    "metadata": {},
    "outputs": [
@@ -2438,7 +2438,7 @@
        "17   128      uniform           5        10000    0.058716          20.263584           0.004378          0.054338      RIMSU512_hk128_TNG2nsO_018_TS5_F8_L4_IK7_NLleaky_relu_al0.1_GAconcat_128_B5_lr0.0001_dr0.5_ds1000_TWuniform_210923052307"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "a676e981-37dd-4ccf-a2c1-75dab190a150",
    "metadata": {},
    "outputs": [
@@ -2472,8 +2472,8 @@
     }
    ],
    "source": [
-    "title = \"RIMSU512_hk128_TNG2nsO_005_F16_IK7_NLleaky_relu_82_B10_lr0.0005_dr0.9_ds1000_211005113627\"\n",
-    "# title = \"RIMSU512_hk128_TNG2nsO_008_F16_IK7_NLrelu_82_B10_lr0.0005_dr0.5_ds10000_211005114812\"\n",
+    "# title = \"RIMSU512_hk128_TNG2nsO_005_F16_IK7_NLleaky_relu_82_B10_lr0.0005_dr0.9_ds1000_211005113627\"\n",
+    "title = \"RIMSU512_hk128_TNG2nsO_008_F16_IK7_NLrelu_82_B10_lr0.0005_dr0.5_ds10000_211005114812\"\n",
     "steps = histories[title][\"step\"].values()\n",
     "train_chi = histories[title][\"train_chi_squared\"].values()\n",
     "val_chi = histories[title][\"val_chi_squared\"].values()\n",
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "1b0daa8b-c140-42a0-aa6f-bd34bcdae332",
    "metadata": {},
    "outputs": [
@@ -2533,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "a42dd98e-eaea-4199-b701-9611fe06cdd0",
    "metadata": {},
    "outputs": [],
@@ -2570,17 +2570,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "2ae23fdf-68ff-496c-a9a3-301c1b5fc471",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x2ab9eb87b730>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x2b659f331430>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
