--- a/notebooks/test_initial_gradient.ipynb
+++ b/notebooks/test_initial_gradient.ipynb
@@ -33,12 +33,6 @@
     "\n",
     "    def compute_output_shape(self, input_shape):\n",
     "        return [None, self.height, self.width, 1]\n",
-    "\n",
-    "    def get_config(self):\n",
-    "        return {\n",
-    "            'height': self.height,\n",
-    "            'width': self.width,\n",
-    "        }\n",
     "    \n",
     "    def build(self, input_shape):\n",
     "        print(\"Building Bilinear Interpolation Layer with input shape:\", input_shape)\n",
@@ -56,38 +50,11 @@
     "        indices = tf.stack([b, y[..., 0], x[..., 0]], 3)\n",
     "        return tf.gather_nd(inputs, indices)\n",
     "\n",
-    "    def call(self, images , coordinates, outer_tape):\n",
-    "#         images, theta = inputs\n",
-    "#         images , coordinates = inputs\n",
-    "#         homogenous_coordinates = self.grid_generator(batch=tf.shape(images)[0])\n",
-    "#         return self.interpolate(images, homogenous_coordinates, theta)\n",
-    "        return self.interpolate(images, coordinates, outer_tape)\n",
+    "    def call(self, images, coordinates):\n",
+    "        return self.interpolate(images, coordinates)\n",
     "\n",
-    "#     def grid_generator(self, batch):\n",
-    "#         x = tf.linspace(-1, 1, self.width)\n",
-    "#         y = tf.linspace(-1, 1, self.height)\n",
-    "            \n",
-    "#         xx, yy = tf.meshgrid(x, y)\n",
-    "#         xx = tf.reshape(xx, (-1,))\n",
-    "#         yy = tf.reshape(yy, (-1,))\n",
-    "#         print(xx.shape)\n",
-    "#         homogenous_coordinates = tf.stack([xx, yy])\n",
-    "#         homogenous_coordinates = tf.cast(homogenous_coordinates, dtype=tf.float32)\n",
-    "#         return homogenous_coordinates\n",
     "    \n",
-    "#     def interpolate(self, images, homogenous_coordinates, theta):\n",
-    "    def interpolate(self, images, coordinates, outer_tape):\n",
-    "        # coordinates shape = [batch, pixels, pixels, 2]\n",
-    "#         with tf.name_scope(\"Transformation\"):\n",
-    "#             transformed = tf.matmul(theta, homogenous_coordinates)\n",
-    "#             transformed = tf.transpose(transformed, perm=[0, 2, 1])\n",
-    "#             transformed = tf.reshape(transformed, [-1, self.height, self.width, 2])\n",
-    "                \n",
-    "#             x_transformed = transformed[:, :, :, 0]\n",
-    "#             y_transformed = transformed[:, :, :, 1]\n",
-    "                \n",
-    "#             x = ((x_transformed + 1.) * tf.cast(self.width, dtype=tf.float32)) * 0.5\n",
-    "#             y = ((y_transformed + 1.) * tf.cast(self.height, dtype=tf.float32)) * 0.5\n",
+    "    def interpolate(self, images, coordinates):\n",
     "\n",
     "        with tf.name_scope(\"VariableCasting\"):\n",
     "            x, y = tf.split(coordinates, 2, axis=3)\n",
@@ -113,22 +80,13 @@
     "            x0 = tf.cast(x0, dtype=tf.float32)\n",
     "            x1 = tf.cast(x1, dtype=tf.float32)\n",
     "            y0 = tf.cast(y0, dtype=tf.float32)\n",
-    "            y1 = tf.cast(y1, dtype=tf.float32)\n",
-    "                            \n",
-    "#             wa = (tf.stop_gradient(x1)-x) * (tf.stop_gradient(y1)-y)\n",
-    "#             wb = (tf.stop_gradient(x1)-x) * (y-tf.stop_gradient(y0))\n",
-    "#             wc = (x-tf.stop_gradient(x0)) * (tf.stop_gradient(y1)-y)\n",
-    "#             wd = (x-tf.stop_gradient(x0)) * (y-tf.stop_gradient(y0))\n",
+    "            y1 = tf.cast(y1, dtype=tf.float32)               \n",
     "            \n",
     "            wa = (x1-x) * (y1-y)\n",
     "            wb = (x1-x) * (y-y0)\n",
     "            wc = (x-x0) * (y1-y)\n",
     "            wd = (x-x0) * (y-y0)\n",
     "\n",
-    "#             wa = tf.expand_dims(wa, axis=3)\n",
-    "#             wb = tf.expand_dims(wb, axis=3)\n",
-    "#             wc = tf.expand_dims(wc, axis=3)\n",
-    "#             wd = tf.expand_dims(wd, axis=3)\n",
     "                        \n",
     "        return wa*Ia + wb*Ib + wc*Ic + wd*Id"
    ]
@@ -1000,7 +958,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8",
    "language": "python",
    "name": "python3"
   },
@@ -1014,7 +972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
