refactored rim_result notebook

--- a/notebooks/scale_complexity_experiment.ipynb
+++ b/notebooks/scale_complexity_experiment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22e3d45a-9431-4592-8737-988b935b56b3",
+   "id": "suited-dragon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea247a09-6e48-4445-93a6-06faa353a6a8",
+   "id": "independent-arbitration",
    "metadata": {},
    "source": [
     "# NIE no shift"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5963862e-9d48-48ed-b45a-6224b1dab501",
+   "id": "complex-eagle",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6321cea5-172f-4d2a-bf52-6c0dff6da88a",
+   "id": "conceptual-national",
    "metadata": {},
    "source": [
     "# NIE noshift vd"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0ba67275-fdbc-4ae7-b485-1610828f144d",
+   "id": "pressing-portugal",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "70d67b7c-c9b6-41bf-96bb-6de489ebf722",
+   "id": "political-treaty",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebd1afd-7fa8-4d79-bb9a-e42328798033",
+   "id": "premium-experience",
    "metadata": {},
    "source": [
     "# Source FOV = 10"
@@ -2004,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de8e4aa8-0a33-45b7-bc1f-4ec4033efd6b",
+   "id": "contained-tennessee",
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a676e981-37dd-4ccf-a2c1-75dab190a150",
+   "id": "fundamental-valuation",
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2494,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1b0daa8b-c140-42a0-aa6f-bd34bcdae332",
+   "id": "threatened-player",
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a42dd98e-eaea-4199-b701-9611fe06cdd0",
+   "id": "particular-angel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,7 +2571,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2ae23fdf-68ff-496c-a9a3-301c1b5fc471",
+   "id": "extraordinary-child",
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2659,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "db6ec1ef-a855-4b9d-9408-602557552e73",
+   "id": "behavioral-cooperative",
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865337d7-13b4-489f-81a8-bf4c82ab12b8",
+   "id": "electric-state",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2851,9 +2851,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2865,7 +2865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
